# Operating-Systems-labs-2024

Afanasyev.Andrew/lab_2/: CMakeLists.txt  build.sh
Afanasyev.Andrew/lab_2/src/: main.cpp
Afanasyev.Andrew/lab_2/src/client/: client.hpp  client_logic.hpp
Afanasyev.Andrew/lab_2/src/connections/: conn_fifo.cpp  conn_fifo.hpp  conn_mq.cpp  conn_mq.hpp  conn_socket.cpp  conn_socket.hpp  connection.hpp  connection_fabric.hpp
Afanasyev.Andrew/lab_2/src/gui/: chat_gui.hpp
Afanasyev.Andrew/lab_2/src/host/: host.hpp  host_logic.hpp
Aptukov.Mikhail/lab2/: .gitignore  CMakeLists.txt  build.sh
Aptukov.Mikhail/lab2/src/client/: client.hpp  client_gui.hpp  client_logic.hpp  client_main.cpp
Aptukov.Mikhail/lab2/src/connections/: conn_fifo.cpp  conn_fifo.hpp  conn_mq.cpp  conn_mq.hpp  conn_socket.cpp  conn_socket.hpp  connection_fabric.hpp
Aptukov.Mikhail/lab2/src/host/: client_info.hpp  host.hpp  host_gui.hpp  host_logic.hpp  host_main.cpp
Babakhina.Sofia/lab2/: CMakeLists.txt  book.h  build.sh
Babakhina.Sofia/lab2/client/: client.cpp  client.h  client_fifo.cpp  client_fifo.h  client_mq.cpp  client_mq.h  client_seg.cpp  client_seg.h
Babakhina.Sofia/lab2/connection/: conn.h  conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_seg.cpp  conn_seg.h
Babakhina.Sofia/lab2/gui/: client_gui.cpp  client_gui.h  host_gui.cpp  host_gui.h
Babakhina.Sofia/lab2/host/: host.cpp  host.h  host_fifo.cpp  host_fifo.h  host_mq.cpp  host_mq.h  host_seg.cpp  host_seg.h
Babakhina.Sofia/lab2/lab2/client/: client_fifo.cpp
Babakhina.Sofia/lab2/lab2/gui/: client_gui.cpp  client_gui.h
Babakhina.Sofia/lab2/semaphore/: semaphore.cpp  semaphore.h
Basalaev.Daniil/Demon/test/: CMakeLists.txt  ut.cpp
Goryunov.Maxim/lab1/: CMakeLists.txt  Config.cpp  Config.h  ConfigRule.h  Daemon.cpp  Daemon.h  Helper.cpp  Helper.h  PathedConfigRule.h  app_daemon  build.sh  config.txt  main.cpp  old_config.txt  setup_and_run.sh
Goryunov.Maxim/lab1/folder 2/: third.txt
Goryunov.Maxim/lab1/folder 3/: plain.txt
Goryunov.Maxim/lab1/folder 3/subfolder1/: other.txt
KromachevMaxim/lab2/: CMakeLists.txt  bash.sh
KromachevMaxim/lab2/Client/: CMakeLists.txt
KromachevMaxim/lab2/build-Client-Desktop_084b1c-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
KromachevMaxim/lab2/src/: client_fifo.cpp  client_pipe.cpp  client_socket.cpp  client_window.cpp  client_window.h  conn.h  conn_fifo.cpp  conn_fifo.h  conn_pipe.cpp  conn_pipe.h  conn_socket.cpp  conn_socket.h  host_fifo.cpp  host_pipe.cpp  host_socket.cpp  host_window.cpp  host_window.h  includes.h  input_dialog.cpp  input_dialog.h
Lapina/lab2/: CMakeLists.txt  build.sh  instruction.md
Lapina/lab2/client/: client.cpp  client.h
Lapina/lab2/connections/: conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_sock.cpp  conn_sock.h  connection.h
Lapina/lab2/gui/: guiHost.cpp  guiHost.h  guiHostWindow.ui
Lapina/lab2/host/: goatHandler.cpp  goatHandler.h  host.cpp  host.h
Lapina/lab2/host/gui/: guiHost.h
Lapina/lab2/utilsConfigurations/: gameWorld.h  safeMap.h  safeVector.h
Lips.Ekaterina/lab2/: CMakeLists.txt  README.md  book.h  build.sh  semaphore.cpp  semaphore.h
Lips.Ekaterina/lab2/client/: client.cpp  client.h  client_fifo.cpp  client_fifo.h  client_mq.cpp  client_mq.h  client_sock.cpp  client_sock.h
Lips.Ekaterina/lab2/connection/: conn.h  conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_sock.cpp  conn_sock.h
Lips.Ekaterina/lab2/host/: host.cpp  host.h  host_fifo.cpp  host_fifo.h  host_mq.cpp  host_mq.h  host_sock.cpp  host_sock.h
Lips.Ekaterina/lab2/interface/: client_interface.cpp  client_interface.h  host_interface.cpp  host_interface.h
Markov.Mikhail/lab2/: .gitignore  CMakeLists.txt  build.sh  client_fifo  client_shm  host_fifo  host_gui  host_shm
Markov.Mikhail/lab2/src/: main.cpp
Markov.Mikhail/lab2/src/client/: CMakeLists.txt  client.cpp  client.hpp  client_fifo.cpp  client_gui.cpp  client_gui.hpp  client_main.cpp  client_mq.cpp  client_shm.cpp
Markov.Mikhail/lab2/src/connections/: CMakeLists.txt  all_connections.hpp  conn_fifo.cpp  conn_fifo.hpp  conn_message_queue.cpp  conn_message_queue.hpp  conn_mq.cpp  conn_mq.hpp  conn_named_chanel.cpp  conn_named_chanel.hpp  conn_shm.cpp  connection.hpp
Markov.Mikhail/lab2/src/daemon/: CMakeLists.txt  daemon.cpp  daemon.hpp
Markov.Mikhail/lab2/src/host/: CMakeLists.txt  client_info.hpp  host.cpp  host.hpp  host_fifo.cpp  host_main.cpp  host_mq.cpp  host_shm.cpp
Markov.Mikhail/lab2/src/includes/: CMakeLists.txt  includes.hpp
Markov.Mikhail/lab2/src/users/: host.hpp
Romanchuk.Evgenii/: CMakeLists.txt  build.sh  config.cpp  config.hpp  config.txt  daemon.cpp  daemon.hpp  daemon_copy.txt  data.hpp  main.cpp
Shkuropat.Pavel/lab2/: CMakeLists.txt  build.sh
Shkuropat.Pavel/lab2/src/: main.cpp
Shkuropat.Pavel/lab2/src/client/: client_fifo.cpp  client_gui.cpp  client_gui.hpp  client_mq.cpp  client_seg.cpp
Shkuropat.Pavel/lab2/src/connections/: conn_fifo.cpp  conn_fifo.hpp  conn_mq.cpp  conn_mq.hpp  conn_seg.cpp  conn_seg.hpp
Shkuropat.Pavel/lab2/src/host/: host_fifo.cpp  host_gui.cpp  host_gui.hpp  host_main.cpp  host_mq.cpp  host_seg.cpp
Skvortsov.Vladimir/lab2/: CMakeLists.txt  Makefile  build.sh
Skvortsov.Vladimir/lab2/src/: ChatWindow.cpp  ChatWindow.hpp  ChatWindow.ui  chat_window.cpp  chat_window.hpp  client.cpp  client_fifo.cpp  client_queue.cpp  client_socket.cpp  conn.hpp  conn_fifo.cpp  conn_fifo.hpp  conn_queue.cpp  conn_queue.hpp  conn_socket.cpp  conn_socket.hpp  host.cpp  host_fifo.cpp  host_queue.cpp  host_socket.cpp
Skvortsov.Vladimir/lab2/src/gui/: CMakeLists.txt  ChatWindow.cpp  ChatWindow.hpp  ChatWindow.ui  main.cpp
Skvortsov.Vladimir/lab2/src/include/: common.hpp  logger.hpp
Solomatov.Aleksandr/Lab2/: .gitignore  CMakeLists.txt  build.sh
Solomatov.Aleksandr/Lab2/src/: main.cpp
Solomatov.Aleksandr/Lab2/src/client_/: client.cpp  client.hpp  client_connection_logic.hpp
Solomatov.Aleksandr/Lab2/src/connections_/: conn_mq.cpp  conn_mq.hpp  conn_pipe.cpp  conn_pipe.hpp  conn_shm.cpp  conn_shm.hpp  (+2 more)
(+186 files in other folders)
